[package]
name = "hashcards"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = "0.8.4"
blake3 = "1.8.2"
chrono = "0.4.42"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
maud = "0.27.0"
open = "5.3.2"
pulldown-cmark = "0.13.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
walkdir = "2"

[dev-dependencies]
portpicker = "0.1.1"
reqwest = "0.12.23"
tempfile = "3.23.0"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
