[package]
name = "hashcards"
version = "0.3.0"
edition = "2024"
description = "A plain text-based spaced repetition system."
homepage = "https://github.com/eudoxia0/hashcards"
repository = "https://github.com/eudoxia0/hashcards"
license = "Apache-2.0"
categories = ["command-line-utilities"]

[dependencies]
axum = "0.8.8"
blake3 = "1.8.3"
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
maud = "0.27.0"
open = "5.3.3"
percent-encoding = "2.3.2"
pulldown-cmark = "0.13.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "fs", "signal"] }
toml = "1.0.3"
walkdir = "2.5.0"

[dev-dependencies]
portpicker = "0.1.1"
reqwest = { version = "0.13.2", features = ["form"] }
tempfile = "3.24.0"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
# Allow using `if a { if b { ... } }` instead of `if a && b { ... }`.
collapsible_if = "allow"
# Allow using `match` instead of `if let`.
single_match = "allow"
